external-crates/move/crates/move-package-alt/tests/data/manifest_parsing_invalid/invalid_hex_address_in_subst/Move.snap
---
source: crates/move-package-alt/tests/parsing_tests.rs
---
error: TOML parse error at line 6, column 34
  |
6 | A = { local = "a", rename-from = { "A" = "0xG" } }
  |                                  ^^^^^^^^^^^^^^^
invalid type: map, expected a string
